Bug 1342345 part 2 - Use a Vector for AutoCycleDetector. r=jonco